--- a/src/model/config.yaml
+++ b/src/model/config.yaml
@@ -4,4 +4,6 @@ learning_rate: 0.0005
 train_data_size: 10000
 loss_type: "MSE" # "L1" "BCE"
 mask_value: [1.0,1.0,3.0,20.0]
-multiprocessing: 30
+multiprocessing: 20
+noise_number: 20
+noise_threshold: 0.05
