--- a/src/model/config.yaml
+++ b/src/model/config.yaml
@@ -1,9 +1,11 @@
+CUDA_VISIBLE_DEVICES: "2,3"
 epoch: 36
 batch: 20
 learning_rate: 0.0005
 train_data_size: 10000
 loss_type: "MSE" # "L1" "BCE"
 mask_value: [1.0,1.0,3.0,20.0]
-multiprocessing: 20
+multiprocessing: 10
+use_noise: True
 noise_number: 20
 noise_threshold: 0.05
